--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -3,8 +3,8 @@
 <% @devices.each do |device| %>
 <b><%= "#{device.id}. device " %></b>
 <%=device.id %>
-<%= post.name %>
-<%= post.address %>
+<%= device.name %>
+<%= device.address %>
 <%= link_to "Show", device_path(device) %>
 <%= link_to "Edit", edit_device_path(device.id) %>
 <%= link_to "Delete", device_path(device), method: :delete ,
