--- a/app/views/devices/_form.html.erb
+++ b/app/views/devices/_form.html.erb
@@ -1,23 +1,30 @@
-<%= form_for @device do |f| %>
+<%= form_for Device.new do |f| %>
+  <% if @device.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@device.errors.count, "error") %> prohibited
+        this article from being saved:
+      </h2>
+      <ul>
+        <% @device.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
 
-<% if @device.errors.any? %>
-<%= pluralize(@device.errors.count, "error") %>
-<% @device.errors.full_messages.each do |msg|%>
- <%= msg %>
-<%end %>
-<h1>error !</h1>
-<% end  %>
-<p>
- <%= f.label :header %><br>
- <%= f.text_field :header %>
- </p>
+<div class="field">
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+  </div>
 
- <p>
-   <%= f.label :body %><br>
-    <%= f.text_area :body %>
-</p>
-<%= f.submit %>
-  </p>
+  <div class="field">
+    <%= f.label :address %>
+    <%= f.text_field :address %>
+  </div>
+
+    <%= f.submit %>
+  </p>
 
 <% end %>
-<%= link_to 'back', devicess_path %>
+<%= link_to 'back', devices_path %>
