--- a/app/views/devices/edit.html.erb
+++ b/app/views/devices/edit.html.erb
@@ -1,4 +1,5 @@
 <h1>Updates</h1>
 
-
+<%= render 'form', device: @device %>
+<%= link_to 'Show', @device %> |
 <%= link_to 'all_devices', devices_path %>
