devices controller and _form works as expected

--- a/app/views/devices/_form.html.erb
+++ b/app/views/devices/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for Device.new do |f| %>
+<%= form_for @device do |f| %>
   <% if @device.errors.any? %>
     <div id="error_explanation">
       <h2>
