make it discrete templates (landing page and devices)

--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -26,3 +26,5 @@ data: { confirm: 'are you sure?' }%>
 <br>
 <br>
 <%= link_to 'New Device',new_device_path %>
+
+<%= render "/devices/layouts/maps" %>
