add drop-down menu for company selection

--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -1,3 +1,4 @@
 <h1>New Device </h1>
+<%= collection_select :device, :company_id, Company.all, :id, :name, prompt: true %>
 <%= render 'form', device: @device %>
 <%= link_to 'all_devices', devices_path %>
