--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -1,14 +1,19 @@
 <h1>all devices</h1
-
-
+  <table class="table table-bordered">
+    <tr>
+      <b>ID-</b>
+      <b>Device Name---</b>
+      <b>Device Adress----</b>
+      <b>Company Name</b>
+    </tr>
+<br>
 <% @devices.each do |device| %>
-<b><%= "#{device.id}. device " %></b>
-<%=device.id %>
+<b><%= "#{device.id} " %></b>
+
 <%= device.name %>
 <%= device.address %>
-<%= device.name %>
 <%= device.company.name %>
-
+</table>
 
 
 <%= link_to "Show", device_path(device) %>
@@ -17,5 +22,7 @@
 data: { confirm: 'are you sure?' }%>
 <br>
 <% end %>
+
+<br>
 <br>
 <%= link_to 'New Device',new_device_path %>
