--- a/app/views/devices/layouts/_main.html.erb
+++ b/app/views/devices/layouts/_main.html.erb
@@ -1,5 +1,5 @@
         <!-- Page Content -->
-        <div id="page-wrapper"
+        <div id="page-wrapper">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
