--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -1,4 +1,35 @@
-<h1>New Device </h1>
-<%= collection_select :device, :company_id, Company.all, :id, :name, prompt: true %>
-<%= render 'form', device: @device %>
-<%= link_to 'all_devices', devices_path %>
+<div id="wrapper">
+  <%= render "/devices/layouts/navbar" %>
+
+  <!-- Page Content -->
+  <div id="page-wrapper">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12">
+          <h1 class="page-header">Register New Device</h1>
+        </div>
+        <!-- /.col-lg-12 -->
+      </div>
+      <!-- /.row -->
+      <div class="row">
+        <div class="col-lg-6 col-md-6 col-lg-offset-3">
+          <div class="panel panel-primary">
+              <div class="panel-heading">
+                  <div class="row">
+                      <div class="col-xs-3">
+                          <i class="fa fa-linux fa-5x"></i>
+                      </div>
+                      <div class="col-xs-9 text-right">
+                          <div class="huge">123</div>
+                          <div>Devices</div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /.container-fluid -->
+  </div>
+  <!-- /#page-wrapper -->
+</div>
