--- a/app/assets/stylesheets/devices.css
+++ b/app/assets/stylesheets/devices.css
@@ -10,7 +10,5 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_self
- *= require bootstrap_and_overrides
- *= require font-awesome
+ *= require bootstrap_sb_admin_base_v2
  */
