new device form template

--- a/app/views/devices/layouts/_main.html.erb
+++ b/app/views/devices/layouts/_main.html.erb
@@ -33,7 +33,7 @@
                                 </div>
                                 <div class="col-xs-9 text-right">
                                     <div class="huge"><%= @datum_count %></div>
-                                    <div>Total data1</div>
+                                    <div>Total datas!</div>
                                 </div>
                             </div>
                         </div>
