--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -1,4 +1,52 @@
 <div id="wrapper">
   <%= render "/devices/layouts/navbar" %>
-  <%= render "/devices/layouts/#{current_user.use_case}" %>
+          <!-- Page Content -->
+        <div id="page-wrapper">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h1 class="page-header">Dashboard</h1>
+                    </div>
+                    <!-- /.col-lg-12 -->
+                </div>
+                <!-- /.row -->
+                  <div class="row">
+                    <div class="col-lg-12">
+                      <div class="panel panel-default">
+                        <div class="panel-heading">
+                          List of your devices
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                          <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                            <thead>
+                              <tr>
+                                <th>Name</th>
+                                <th>Date Added</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <% @devices.each do |device| %>
+                                <tr class="odd gradeX">
+                                <td><%= device.name %></td>
+                                <td><%= device.created_at %></td>
+                                </tr>
+                              <% end %>
+                            </tbody>
+                          </table>
+                          <!-- /.table-responsive -->
+                        </div>
+                        <!-- /.panel-body -->
+                      </div>
+                      <!-- /.panel -->
+                    </div>
+                    <!-- /.col-lg-12 -->
+                  </div>
+
+                  <%= render "/devices/layouts/#{current_user.use_case}" %>
+                </div>
+            </div>
+            <!-- /.container-fluid -->
+        </div>
+        <!-- /#page-wrapper -->
 </div>
