--- a/app/views/devices/layouts/_garbage.html.erb
+++ b/app/views/devices/layouts/_garbage.html.erb
@@ -1,1 +1,11 @@
-<%= render '/devices/layouts/maps' %>
+<div class="row">
+    <div class="col-lg-12">
+        <h1 class="page-header">Status on Map</h1>
+    </div>
+</div>
+<div class="row">
+  <div class="col-lg-12">
+    <%= render '/devices/layouts/maps' %>
+  </div>
+</div>
+</div>
