--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -28,7 +28,7 @@
                             <tbody>
                               <% @devices.each do |device| %>
                                 <tr class="odd gradeX">
-                                <td><%= device.name %></td>
+                                <td><%= link_to (device.name), device %></td>
                                 <td><%= device.created_at %></td>
                                 </tr>
                               <% end %>
