--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -1,15 +1,43 @@
+<div id="wrapper">
+  <%= render "/devices/layouts/navbar" %>
 
-<%= @device %>
-<br>
-<%= @device.id %>
-<br>
-<%= @device.name %>
-<br>
-<%= @device.address %>
-<br>
-<%= @device.created_at %>
-<br>
-<%= @device.updated_at %>
-<br>
-<%= link_to 'Edit', edit_device_path(@device) %> |
-<%= link_to 'Back', devices_path %>
+  <!-- Page Content -->
+  <div id="page-wrapper">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12">
+          <h1 class="page-header">Device <%= @device.name %></h1>
+        </div>
+        <!-- /.col-lg-12 -->
+      </div>
+      <!-- /.row -->
+      <div class="row">
+        <div class="col-lg-6 col-md-6 col-lg-offset-3">
+          <div class="panel panel-default">
+              <div class="panel-heading">
+                  Device info for <%= @device.name %>
+              </div>
+              <div class="panel-body">
+                  <div class="row">
+                      <div class="col-lg-12">
+                        <b>Device Name:</b> <%= @device.name %>
+                        <br>
+                        <b>Device Address:</b> <%= @device.address %>
+                        <br>
+                        <b>Device Comapy:</b> <%= @device.company.name %>
+                        <br>
+                        <b>Device Created At:</b> <%= @device.created_at %>
+                      </div>
+                      <!-- /.col-lg-6 (nested) -->
+                  </div>
+                  <!-- /.row (nested) -->
+              </div>
+              <!-- /.panel-body -->
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /.container-fluid -->
+  </div>
+  <!-- /#page-wrapper -->
+</div>
