--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -38,7 +38,7 @@
 
                           <div class="actions">
                             <%= f.submit "Register", class: "btn btn-default" %>
-                            <button type="reset" class="btn btn-default">Reset Button</button>
+                            <button type="reset" class="btn btn-default">Reset</button>
                           </div>
                         <% end %>
                       </div>
