--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -18,7 +18,7 @@
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
-                          <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                          <table width="100%" class="table table-striped table-bordered table-hover" id="myTable">
                             <thead>
                               <tr>
                                 <th>Name</th>
@@ -30,6 +30,8 @@
                                 <tr class="odd gradeX">
                                 <td><%= link_to (device.name), device %></td>
                                 <td><%= device.created_at %></td>
+                                <td><%= button_to "Edit", edit_device_path(device), class: 'btn btn-primary btn-block' %></td>
+                                <td><%= button_to "Delete", device_path(device), method: :delete, class: 'btn btn-danger btn-block'  %></td>
                                 </tr>
                               <% end %>
                             </tbody>
@@ -50,3 +52,9 @@
         </div>
         <!-- /#page-wrapper -->
 </div>
+
+<script>
+  $(document).ready(function(){
+    $('#myTable').DataTable();
+});
+</script>
