--- a/app/views/devices/_form.html.erb
+++ b/app/views/devices/_form.html.erb
@@ -1,31 +1,21 @@
-<%= form_for @device do |f| %>
-  <% if @device.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@device.errors.count, "error") %> prohibited
-        this article from being saved:
-      </h2>
-      <ul>
-        <% @device.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-
-<div class="field">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
+<%= form_for(@device) do |f| %>
+  <div class="form-group">
+    <%= f.label :name %><br />
+    <%= f.text_field :name, autofocus: true, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :address %>
-    <%= f.text_field :address %>
+    <%= f.text_field :address, class: "form-control" %>
   </div>
 
-    <%= f.submit %>
-  </p>
+  <div class="form-group">
+    <%= f.label :unique_code %>
+    <%= f.text_field :uniq_code, class: "form-control" %>
+  </div>
 
+  <div class="actions">
+    <%= f.submit "Register", class: "btn btn-default" %>
+    <button type="reset" class="btn btn-default">Reset</button>
+</div>
 <% end %>
-<%= link_to 'back', devices_path %>
