--- a/app/views/devices/edit.html.erb
+++ b/app/views/devices/edit.html.erb
@@ -1,5 +1,37 @@
-<h1>Updates</h1>
+<div id="wrapper">
+  <%= render "/devices/layouts/navbar" %>
 
-<%= render 'form', device: @device %>
-<%= link_to 'Show', @device %> |
-<%= link_to 'all_devices', devices_path %>
+  <!-- Page Content -->
+  <div id="page-wrapper">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12">
+          <h1 class="page-header">Edit Device <%= @device.name %></h1>
+        </div>
+        <!-- /.col-lg-12 -->
+      </div>
+      <!-- /.row -->
+      <div class="row">
+        <div class="col-lg-6 col-md-6 col-lg-offset-3">
+          <div class="panel panel-default">
+              <div class="panel-heading">
+                  Edit Device <%= @device.name %>
+              </div>
+              <div class="panel-body">
+                  <div class="row">
+                      <div class="col-lg-12">
+                      <%= render 'form' , device: @device%>
+                      </div>
+                      <!-- /.col-lg-6 (nested) -->
+                  </div>
+                  <!-- /.row (nested) -->
+              </div>
+              <!-- /.panel-body -->
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /.container-fluid -->
+  </div>
+  <!-- /#page-wrapper -->
+</div>
