--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -20,27 +20,7 @@
               <div class="panel-body">
                   <div class="row">
                       <div class="col-lg-12">
-                        <%= form_for(@device) do |f| %>
-                          <div class="form-group">
-                            <%= f.label :name %><br />
-                            <%= f.text_field :name, autofocus: true, class: "form-control" %>
-                          </div>
-
-                          <div class="form-group">
-                            <%= f.label :address %>
-                            <%= f.text_field :address, class: "form-control" %>
-                          </div>
-
-                          <div class="form-group">
-                            <%= f.label :unique_code %>
-                            <%= f.text_field :uniq_code, class: "form-control" %>
-                          </div>
-
-                          <div class="actions">
-                            <%= f.submit "Register", class: "btn btn-default" %>
-                            <button type="reset" class="btn btn-default">Reset</button>
-                          </div>
-                        <% end %>
+                      <%= render 'form' , device: @device%>
                       </div>
                       <!-- /.col-lg-6 (nested) -->
                   </div>
