--- a/app/views/devices/layouts/_maps.html.erb
+++ b/app/views/devices/layouts/_maps.html.erb
@@ -8,12 +8,15 @@
   <div id="map"></div>
   <br>
   <br>
+  <input type="submit" id="submit">
   <script>
     function myMap() {
     var mapCanvas = document.getElementById("map");
     var myCenter = new google.maps.LatLng(40.993912,39.776724);
     var mapOptions = {center: myCenter, zoom: 17};
     var map = new google.maps.Map(mapCanvas, mapOptions);
+    var directionsService = new google.maps.DirectionsService;
+    var directionsDisplay = new google.maps.DirectionsRenderer;
 
     <% @devices.each do |device| %>
       var newMarker = new google.maps.LatLng(<%=device.name%>);
@@ -33,6 +36,44 @@
         });
       <% end %>
     <% end %>
+
+
+
+    directionsDisplay.setMap(map);
+
+        document.getElementById('submit').addEventListener('click', function() {
+          calculateAndDisplayRoute(directionsService, directionsDisplay);
+        });
+      }
+
+
+
+    function calculateAndDisplayRoute(directionsService, directionsDisplay) {
+        var waypts = [{
+          location: new google.maps.LatLng(40.996840, 39.772540),
+          stopover: true
+        },
+        {
+          location: new google.maps.LatLng(40.997414, 39.771618),
+          stopover: true
+        }
+        ];
+
+        directionsService.route({
+          origin: new google.maps.LatLng(40.992802, 39.776365),
+          destination: new google.maps.LatLng(40.992802, 39.776365),
+          waypoints: waypts,
+          optimizeWaypoints: true,
+          travelMode: 'DRIVING'
+        }, function(response, status) {
+          if (status === 'OK') {
+            directionsDisplay.setDirections(response);
+            var route = response.routes[0];
+          } else {
+            window.alert('Directions request failed due to ' + status);
+          }
+        });
+
   }
   </script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-s4spIbfdJ2Yp82XoDv6x4OzgZUTWAb0&callback=myMap"
