--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -12,6 +12,9 @@
       </div>
       <!-- /.row -->
       <div class="row">
+      <% flash.each do |key, value| %>
+        <div class="alert alert-<%= key %>"><%= value %></div>
+      <% end %>
         <div class="col-lg-6 col-md-6 col-lg-offset-3">
           <div class="panel panel-default">
               <div class="panel-heading">
