--- a/app/views/devices/layouts/_garbage.html.erb
+++ b/app/views/devices/layouts/_garbage.html.erb
@@ -25,8 +25,8 @@
 	                    <i class="fa fa-server fa-5x"></i>
 	                </div>
 	                <div class="col-xs-9 text-right">
-	                    <div class="huge">12</div>
-	                    <div>Full trash cans</div>
+	                    <div class="huge">Konum</div>
+	                    <div>Karadeniz Teknik Üniversitesi</div>
 	                </div>
 	            </div>
 	        </div>
